done with setting up sripe

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=https://PROJECT_BACKEND.onrender.com
+VITE_BASE_URL=https://mebius-backend-meraj.onrender.com
 
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_aW1tdW5lLWVtdS03Mi5jbGVyay5hY2NvdW50cy5kZXYk
 
